--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,10 @@ dependencies:
     sdk: flutter
 
   country_code_picker: ^1.3.15
+  flutter_layout_grid: ^0.10.1
+  pin_code_fields: ^3.0.1
+  flutter_svg: ^0.17.4
+  google_fonts: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -49,6 +53,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - flags/
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -61,6 +66,11 @@ flutter:
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
+  fonts:
+    - family: Segoe Print
+      fonts:
+        - asset: assets/fonts/segoe_print.ttf
+
   # example:
   # fonts:
   #   - family: Schyler
