add firebase, keystore

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,7 @@
+STOREPASSWORD=xcvbsdfg
+KEYPASSWORD=xcvbsdfg
+ALIAS=key0
+
 org.gradle.jvmargs=-Xmx1536M
 android.enableR8=true
 android.useAndroidX=true
