--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   reorderables: ^0.3.2
   flutter_launcher_name: ^0.0.1
 
+  firebase_core: ^0.4.0+9
+  firebase_auth: ^0.16.1
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
