--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   google_fonts: ^1.1.0
   reorderables: ^0.3.2
   flutter_launcher_name: ^0.0.1
+  provider: ^4.1.3
+  flutter_sim_country_code: ^0.0.3
+  hive: ^1.4.1+1
+  hive_flutter: ^0.3.0+2
 
   firebase_core: ^0.4.0+9
   firebase_auth: ^0.16.1
@@ -46,6 +50,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  hive_generator: ^0.7.0+2
+  build_runner: ^1.10.0
+
+dependency_overrides:
+  dartx: ^0.3.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
