--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_sim_country_code: ^0.0.3
   hive: ^1.4.1+1
   hive_flutter: ^0.3.0+2
+  image_picker: ^0.6.7+1
 
   firebase_core: ^0.4.0+9
   firebase_auth: ^0.16.1
