--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   hive: ^1.4.1+1
   hive_flutter: ^0.3.0+2
   image_picker: ^0.6.7+1
+  dio: ^3.0.9
+  pretty_dio_logger: ^1.1.1
+  firebase_storage: ^3.1.6
+  intl: ^0.16.1
 
   firebase_core: ^0.4.0+9
   firebase_auth: ^0.16.1
