--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   pretty_dio_logger: ^1.1.1
   firebase_storage: ^3.1.6
   intl: ^0.16.1
+  flutter_xlider: ^3.4.0
 
 #  flutter_tindercard: ^0.1.8
 #  swipeable_tinder_card: ^1.0.0
