--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_storage: ^3.1.6
   intl: ^0.16.1
   flutter_xlider: ^3.4.0
+  share: ^0.6.4+3
 
 #  flutter_tindercard: ^0.1.8
 #  swipeable_tinder_card: ^1.0.0
