--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  country_code_picker: ^1.3.15
+#  country_code_picker: ^1.3.15
   flutter_layout_grid: ^0.10.1
   pin_code_fields: ^3.0.1
   flutter_svg: ^0.17.4
@@ -66,7 +66,7 @@ dev_dependencies:
 
 dependency_overrides:
   dartx: ^0.3.0
-  path: ^1.6.0 # todo remove
+#  path: ^1.6.0 # todo remove
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
