--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.0.8+8
+version: 0.0.9+9
 # flutter pub run flutter_launcher_name:main
 flutter_launcher_name:
-  name: "OneMatch (b.0.0.8)"
+  name: "OneMatch (b.0.0.9)"
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -36,8 +36,6 @@ dependencies:
   flutter_launcher_name: ^0.0.1
   provider: ^4.1.3
   flutter_sim_country_code: ^0.0.3
-  hive: ^1.4.1+1
-  hive_flutter: ^0.3.0+2
   image_picker: ^0.6.7+1
   dio: ^3.0.9
   pretty_dio_logger: ^1.1.1
@@ -46,6 +44,8 @@ dependencies:
   flutter_xlider: ^3.4.0
   share: ^0.6.4+3
   json_serializable: ^3.3.0
+  get: ^3.1.0
+  get_storage: ^1.2.1
 
   flutter_tindercard: ^0.1.8
 
@@ -66,11 +66,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  hive_generator: ^0.7.0+2
   build_runner: ^1.10.0
 
-dependency_overrides:
-  dartx: ^0.3.0
+#dependency_overrides:
+#  dartx: ^0.3.0
 #  path: ^1.6.0 # todo remove
 
 # For information on the generic Dart part of this file, see the
