--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=/Users/daniilgrusak/Library/Android/sdk
 flutter.sdk=/Users/daniilgrusak/flutter
-flutter.buildMode=release
-flutter.versionName=0.0.9
-flutter.versionCode=9
+flutter.buildMode=debug
+flutter.versionName=0.0.10
+flutter.versionCode=10
