--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,9 @@ dependencies:
   flutter_xlider: ^3.4.0
   share: ^0.6.4+3
   json_serializable: ^3.3.0
-  get: ^3.1.0
+  get: ^3.1.2
   get_storage: ^1.2.1
+  flutter_spinkit: "^4.1.2"
 
   flutter_tindercard: ^0.1.8
 
