inc version to 12

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=/Users/daniilgrusak/Library/Android/sdk
 flutter.sdk=/Users/daniilgrusak/flutter
-flutter.buildMode=debug
-flutter.versionName=0.0.11
-flutter.versionCode=11
+flutter.buildMode=release
+flutter.versionName=0.0.12
+flutter.versionCode=12
