--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   dio: ^3.0.9
   pretty_dio_logger: ^1.1.1
   firebase_storage: ^3.1.6
+  firebase_database: ^3.1.6
   intl: ^0.16.1
   flutter_xlider: ^3.4.0
   share: ^0.6.4+3
