--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
 
   firebase_core: ^0.4.0+9
   firebase_auth: ^0.16.1
+  smooth_page_indicator: ^0.1.5
 
 
   # The following adds the Cupertino Icons font to your application.
