--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=/Users/daniilgrusak/Library/Android/sdk
 flutter.sdk=/Users/daniilgrusak/flutter
-flutter.buildMode=debug
-flutter.versionName=0.0.15
-flutter.versionCode=15
+flutter.buildMode=release
+flutter.versionName=0.0.16
+flutter.versionCode=16
