--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   flutter_tindercard: ^0.1.8
 
   dartx: ^0.4.2
+  uuid: 2.2.0
 
 #  flutter_tindercard: ^0.1.8
 #  swipeable_tinder_card: ^1.0.0
