--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=/Users/daniilgrusak/Library/Android/sdk
 flutter.sdk=/Users/daniilgrusak/flutter
-flutter.buildMode=debug
-flutter.versionName=1.0.19
-flutter.versionCode=19
+flutter.buildMode=release
+flutter.versionName=1.0.20
+flutter.versionCode=20
