--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=/Users/daniilgrusak/Library/Android/sdk
 flutter.sdk=/Users/daniilgrusak/flutter
-flutter.buildMode=release
+flutter.buildMode=debug
 flutter.versionName=1.0.20
 flutter.versionCode=20
