--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
 
   flutter_tindercard: ^0.1.8
 
-  dartx: ^0.4.2
+  dartx: ^0.5.0
   uuid: 2.2.0
 
 #  flutter_tindercard: ^0.1.8
@@ -108,6 +108,13 @@ flutter:
     - family: Segoe Print
       fonts:
         - asset: assets/fonts/segoe_print.ttf
+
+  # Генератор иконок
+  # icon_font_generator --from=icons --class-name=UiIcons --out-font=assets/icons/ui_icons.ttf --out-flutter=lib/resources/ui_icons.dart
+
+    - family: UiIcons
+      fonts:
+        - asset: assets/icons/ui_icons.ttf
 
   # example:
   # fonts:
