--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,5 @@
 sdk.dir=/Users/infraymer/Library/Android/sdk
 flutter.sdk=/Users/infraymer/flutter
+flutter.buildMode=debug
+flutter.versionName=1.1.6
+flutter.versionCode=29
