--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -82,4 +82,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:20.2.3'
 }
 
+apply plugin: 'io.fabric'
 apply plugin: 'com.google.gms.google-services'
