--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,12 @@ dependencies:
   image_picker: ^0.6.7+3
   dio: ^3.0.9
   pretty_dio_logger: ^1.1.1
+
   firebase_storage: ^3.1.6
   firebase_database: ^3.1.6
   firebase_messaging: ^6.0.16
+  firebase_crashlytics: ^0.1.4+1
+
   intl: ^0.16.1
   flutter_xlider: ^3.4.0
   share: ^0.6.4+3
