--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=/Users/infraymer/Library/Android/sdk
 flutter.sdk=/Users/infraymer/flutter
-flutter.buildMode=release
-flutter.versionName=1.2.0
-flutter.versionCode=30
+flutter.buildMode=debug
+flutter.versionName=1.3.1
+flutter.versionCode=32
