--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   firebase_core: ^0.4.0+9
   firebase_auth: ^0.16.1
   smooth_page_indicator: ^0.1.5
+  location: ^3.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
