--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=/Users/infraymer/Library/Android/sdk
 flutter.sdk=/Users/infraymer/flutter
-flutter.buildMode=debug
-flutter.versionName=1.3.1
-flutter.versionCode=32
+flutter.buildMode=release
+flutter.versionName=1.3.2
+flutter.versionCode=33
