--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,10 @@ dependencies:
   location: ^3.0.2
 
 
+  #This Flutter plugin provides an API for querying information about an application package.
+  package_info: ^0.4.3
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
@@ -96,6 +100,7 @@ flutter:
   assets:
     - flags/
     - assets/images/
+    - icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
