--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/Users/khramov/Library/Android/sdk
-flutter.sdk=/Users/khramov/develop/flutter
-flutter.buildMode=release
-flutter.versionName=1.3.3
-flutter.versionCode=34
+sdk.dir=D:\\Programs\\Android\\Sdk
+flutter.sdk=D:\\Programs\\flutter
+flutter.buildMode=debug
+flutter.versionName=1.3.4
+flutter.versionCode=35
