--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   get_storage: ^1.3.0
   flutter_spinkit: "^4.1.2"
 
+  maps_toolkit: 1.1.0+2
+
+
   flutter_tindercard: ^0.1.9
 
   dartx: ^0.5.0
