--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=D:\\Programs\\Android\\Sdk
 flutter.sdk=D:\\Programs\\flutter
-flutter.buildMode=debug
+flutter.buildMode=release
 flutter.versionName=1.3.4
 flutter.versionCode=35
